Specification import - initial page content

--- a/score-web/src/app/basis/navbar/navbar.component.html
+++ b/score-web/src/app/basis/navbar/navbar.component.html
@@ -63,6 +63,7 @@
         <button mat-menu-item routerLink="agency_id_list">View/Edit Agency ID List</button>
         <button mat-menu-item routerLink="release">View/Edit Release</button>
         <button mat-menu-item routerLink="namespace">View/Edit Namespace</button>
+        <button mat-menu-item routerLink="new_specification">Import New Specification</button>
       </ng-template>
     </mat-menu>
 
