Calling FlatBCC service

--- a/score-web/src/app/specification-management/specification-import/specification-import.component.html
+++ b/score-web/src/app/specification-management/specification-import/specification-import.component.html
@@ -30,6 +30,9 @@
         <button mat-raised-button color="primary" (click)="approve()">
           Approve CC Gap Analysis
         </button>
+        <button mat-raised-button color="primary" (click)="flatBCC()">
+          Flat BCC
+        </button>
       </div>
     </div>
   </div>
