--- a/score-web/src/app/basis/navbar/navbar.component.html
+++ b/score-web/src/app/basis/navbar/navbar.component.html
@@ -63,7 +63,8 @@
         <button mat-menu-item routerLink="agency_id_list">View/Edit Agency ID List</button>
         <button mat-menu-item routerLink="release">View/Edit Release</button>
         <button mat-menu-item routerLink="namespace">View/Edit Namespace</button>
-        <button mat-menu-item routerLink="new_specification">Import New Specification</button>
+        <button mat-menu-item routerLink="specification/new">Import New Specification</button>
+        <button mat-menu-item routerLink="specification/list">Specification Components List</button>
       </ng-template>
     </mat-menu>
 
