--- a/score-web/src/app/specification-management/specification-import/specification-import.component.html
+++ b/score-web/src/app/specification-management/specification-import/specification-import.component.html
@@ -9,11 +9,38 @@
   <div class="p-3">
     <mat-card>
       <mat-card-content class="mat-card-container">
+        <div class="container-fluid" style="padding: 0;">
+          <div class="row">
+            <div class="col-md-2 col-sm-12">
         <mat-form-field>
-          <mat-label>Description</mat-label>
-          <textarea rows="6" cols="30" matInput [(ngModel)]="specification.description"></textarea>
+          <mat-label>Root Folder Path</mat-label>
+          <input matInput [(ngModel)]="specification.rootFolderPath"
+                 placeholder="Root Folder Path">
         </mat-form-field>
-
+            </div>
+            <div class="col-md-2 col-sm-12">
+              <mat-form-field>
+                <mat-label>Document Name</mat-label>
+                <input matInput [(ngModel)]="specification.documentName"
+                       placeholder="Document Name">
+              </mat-form-field>
+            </div>
+            <div class="col-md-2 col-sm-12">
+              <mat-form-field>
+                <mat-label>Specification Type</mat-label>
+                <input matInput [(ngModel)]="specification.specificationType"
+                       placeholder="Specification Type">
+              </mat-form-field>
+            </div>
+            <div class="col-md-2 col-sm-12">
+              <mat-form-field>
+                <mat-label>Source Name</mat-label>
+                <input matInput [(ngModel)]="specification.sourceName"
+                       placeholder="Source Name">
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
       </mat-card-content>
     </mat-card>
   </div>
